--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,6 +1,6 @@
 #navbar > ul {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 4fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 3fr 1fr 1fr 1fr;
 }
 #navbar > ul {
     list-style-type: none;
@@ -16,6 +16,10 @@
     grid-column: 3 / 4;
 }
 /* login link*/
+#navbar > ul > li:nth-child(3) {
+    grid-column: 5 / 6;
+}
+/* signup/logout link*/
 #navbar > ul > li:nth-child(3) {
     grid-column: 5 / 6;
 }
